--- a/typescript/create-onchain-agent/package.json
+++ b/typescript/create-onchain-agent/package.json
@@ -40,7 +40,10 @@
     "nunjucks": "^3.2.4",
     "ora": "^8.1.0",
     "picocolors": "^1.1.0",
-    "prompts": "^2.4.2"
+    "prompts": "^2.4.2",
+    "@anthropic-ai/sdk": "^0.71.2",
+    "@google/generative-ai": "^0.24.1",
+    "openai": "^4.73.1"
   },
   "devDependencies": {
     "tsx": "^4.7.1",
