feat: add LangChain and AI SDK dependencies for enhanced AI provider support

--- a/typescript/create-onchain-agent/package.json
+++ b/typescript/create-onchain-agent/package.json
@@ -43,7 +43,13 @@
     "prompts": "^2.4.2",
     "@anthropic-ai/sdk": "^0.71.2",
     "@google/generative-ai": "^0.24.1",
-    "openai": "^4.73.1"
+    "openai": "^4.73.1",
+    "@langchain/openai": "^0.3.0",
+    "@langchain/google-genai": "^0.1.0",
+    "@langchain/anthropic": "^0.2.0",
+    "@ai-sdk/openai": "^1.0.0",
+    "@ai-sdk/google": "^1.0.0",
+    "@ai-sdk/anthropic": "^1.0.0"
   },
   "devDependencies": {
     "tsx": "^4.7.1",
